        Retrieve the  'color stops' on a  color line.  As an  input, a
        color stop iterator gets used, which in turn is retrieved from
        a paint.

      FT_Get_Paint
        Dereference  an  `FT_OpaquePaint`   object  and  retrieve  the
        corresponding `FT_COLR_Paint`  object, which  contains details
        on how to draw the respective 'COLR' v1 `Paint` table.


  II. MISCELLANEOUS

  - FreeType has moved its infrastructure to

      https://gitlab.freedesktop.org/freetype

    A  side  effect  is  that  the git  repositories  are  now  called
    `freetype.git` and  `freetype-demos.git`, which by  default expand
    to the directories  `freetype` and `freetype-demos`, respectively.
    The documentation has been updated accordingly.

    FreeType's Savannah  repositories will stay; they  are now mirrors
    of the 'freedesktop.org' repositories.

  - A  new  function  `FT_Get_Transform`  returns  the  values set  by
    `FT_Set_Transform`.

  - A  new configuration  macro `FT_DEBUG_LOGGING`  is available.   It
    provides extended debugging capabilities for FreeType, for example
    showing a time stamp or displaying the component a tracing message
    comes from.  See file `docs/DEBUG` for more information.

    This work was Priyesh Kumar's GSoC 2020 project.

  - The legacy Type 1 and CFF  engines are further demoted due to lack
    of CFF2 charstring support.  You now need to use `FT_Property_Set`
    to  enable  them  besides  the  `T1_CONFIG_OPTION_OLD_ENGINE`  and
    `CFF_CONFIG_OPTION_OLD_ENGINE` options, respectively.

  - The experimental 'warp' mode (AF_CONFIG_OPTION_USE_WARPER) for the
    auto-hinter has been removed.

  - The smooth rasterizer performance has been improved by >10%.  Note
    that  due to  necessary code  changes there  might be  very subtle
    differences  in  rendering.  They  are  not  visible by  the  eye,
    however.

  - PCF bitmap fonts compressed with LZW (these are usually files with