@@ -317,6 +317,15 @@ FT_BEGIN_HEADER
    * @description:
    *   The functions described here allow access of colored glyph layer data
    *   in OpenType's 'COLR' tables.
+   *
+   *   Note that FreeType does *not* provide rendering in general of glyphs
+   *   that use a 'COLR' table!  While FreeType has very limited rendering
+   *   support for 'COLR' v0 tables (without a possibility to change the
+   *   color palette) via @FT_Render_Glyph, there is no such convenience
+   *   code for 'COLR' v1 tables -- while it appears that v1 is simply an
+   *   'improved' version of v0, this is not the case: it is a completely
+   *   different color font format, and you need a dedicated graphics
+   *   library like Skia or Cairo to handle a v1 table's drawing commands.
    */
 
 
